# rag_pw

./: .gitignore  BGERetriever.py  BGERetriever_v2.py  BGERetriever_v2_optimized.py  BGERetriever_v3.py  Chunk_based_retriever.ipynb  DenseRetriever.py  Dense_Retriever.py  HFCompactRetriever.py  MathDataset.py  NqDataset.py  QuestionEncoder.py  RAG_Evaluation.py  README.md  RagEval.py  RagUtils.py  analyze_data.py  analyze_result.py  analyze_token_lengths.py  app.py  app_sparse.py  baseline_model.py  bootstrap_testing.py  build_document_index.py  build_example_map.py  build_faiss_hnsw_bge_m3.py  build_faiss_index_gpu.py  check_gpu.py  chunk_jsonl_to_tsv.py  chunk_openmath_jsonl.py  clean_tsv.py  dataset.py  document_indexer.py  document_vector_index.py  download_data.py  dynamic_rag.py  dynamic_rag_v2.py  dynamic_retrieval.py  environment.yml  evaluate.ipynb  (+63 more)
analysis/: evaluate_runs.py  evaluation.ipynb  rq_evaluation.ipynb  systematic_evaluation.ipynb
misc/: sparse_retrieve_contexts.py  test.py
notebooks/: thesis_analysis.ipynb
results/: COMPARISON_NOTE.md  gsm_COT_20250710_0040.jsonl  gsm_COT_20250717_1721.jsonl  gsm_DYNAMIC_COT_20250715_1710.jsonl  gsm_DYNAMIC_COT_20250716_0825.jsonl  gsm_STATIC_COT_20250712_1548.jsonl  gsm_STATIC_COT_20250713_1117.jsonl  gsm_STATIC_COT_20250714_0905.jsonl
results/cot/: gsm_COT_20250813_1600.jsonl  math500_COT_20250905_124208.jsonl
results/dynamic/: gsm8k_mathpile_raw_20250908_0831_PROMPT2.0.json  (+7 more)
script/: compare_results.py  cot_eval.sh  dynamic_cot_eval.sh  run_static_cot.sh
utils/: download_data.py  filter_subset_wiki.py
(+7 files in other folders)
