[project]
name = "rag-pw"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "filelock>=3.25.2",
    "huggingface-hub>=1.8.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "protobuf>=6.33.6",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "regex>=2026.2.28",
    "requests>=2.33.0",
    "rouge>=1.0.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "sympy>=1.14.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "wget>=3.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

